# autoware.universe

./: versions.json
common/autoware_point_types/test/: test_point_types.cpp
common/tensorrt_common/src/: tensorrt_common.cpp
launch/tier4_map_launch/launch/: map.launch.py
launch/tier4_perception_launch/: package.xml
main/: sitemap.xml
main/common/tier4_debug_tools/: index.html
main/search/: search_index.json
perception/autoware_cluster_merger/: CMakeLists.txt  package.xml
perception/autoware_tensorrt_yolox/: package.xml
perception/autoware_traffic_light_map_based_detector/: package.xml
perception/compare_map_segmentation/: README.md
perception/detected_object_validation/: CMakeLists.txt  package.xml
perception/euclidean_cluster/: CMakeLists.txt
perception/image_projection_based_fusion/: CMakeLists.txt
perception/intensity_based_validator/: CMakeLists.txt  package.xml
perception/intensity_based_validator/config/: intensity_based_validator.param.yaml
perception/intensity_based_validator/include/intensity_based_validator/: intensity_based_validator.hpp
perception/intensity_based_validator/launch/: intensity_based_validator.launch.xml
perception/intensity_based_validator/src/: intensity_based_validator.cpp
perception/raindrop_cluster_filter/: CMakeLists.txt
perception/roi_based_detector/: package.xml
perception/traffic_light_map_based_detector/: package.xml
sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt  package.xml
sensing/image_diagnostics/: package.xml
sensing/pointcloud_preprocessor/: CMakeLists.txt
(+242 files in other folders)
